--- a/Mds.Blazor.Web.Shared/Components/Pages/Users/Users.razor
+++ b/Mds.Blazor.Web.Shared/Components/Pages/Users/Users.razor
@@ -2,39 +2,95 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<h1>Liste des utilisateurs</h1>
 
 <div class="users">
-    <div>
-        <NavLink href="/user/create" class="btn btn-primary">Add</NavLink>
+    <div class="mb-3">
+        <NavLink href="/user/create" class="btn btn-primary">Ajouter un utilisateur</NavLink>
     </div>
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Prénom</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Email</th>
-                <th scope="col">Adresse</th>
-                <th scope="col">Téléphone</th>
-                <th scope="col">Date de naissance</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in this.usersCollection)
-            {
+
+    <!-- Wrapper pour rendre le tableau scrollable sur petits écrans -->
+    <div class="table-responsive">
+        <table class="table table-striped table-bordered">
+            <thead class="table-dark">
                 <tr>
-                    <td>@item.Id</td>
-                    <td>@item.Firstname</td>
-                    <td>@item.Lastname</td>
-                    <td>@item.Email</td>
-                    <td>@item.Address</td>
-                    <td>@item.Phone</td>
-                    <td>@item.DateOfBirth</td>
+                    <th scope="col">#</th>
+                    <th scope="col">Prénom</th>
+                    <th scope="col">Nom</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Adresse</th>
+                    <th scope="col">Téléphone</th>
+                    <th scope="col">Date de naissance</th>
+                    <th scope="col">Centres d'intérêt</th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @if (this.usersCollection.Any())
+                {
+                    @foreach (var item in this.usersCollection)
+                    {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Firstname</td>
+                            <td>@item.Lastname</td>
+                            <td>@item.Email</td>
+                            <td>@item.Address</td>
+                            <td>@item.Phone</td>
+                            <td>@item.DateOfBirth.ToShortDateString()</td>
+                            <td>
+                                @if (item.Interests?.Any() == true)
+                                {
+                                    <ul class="list-unstyled mb-0">
+                                        @foreach (var interest in item.Interests)
+                                        {
+                                            <li>- @interest</li>
+                                        }
+                                    </ul>
+                                }
+                                else
+                                {
+                                    <em>Aucun</em>
+                                }
+                            </td>
+                        </tr>
+                    }
+                }
+                else
+                {
+                    <tr>
+                        <td colspan="8" class="text-center">Aucun utilisateur trouvé.</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
+
+<style>
+    .users {
+        margin: 20px;
+    }
+
+    .table-responsive {
+        overflow-x: auto; /* Activer le défilement horizontal si le tableau est trop large */
+    }
+
+    .table {
+        width: 100%;
+        border-collapse: collapse;
+    }
+
+        .table th, .table td {
+            padding: 10px;
+            text-align: left;
+            white-space: nowrap; /* Empêche le texte de déborder dans les colonnes */
+        }
+
+    .table-striped tbody tr:nth-of-type(odd) {
+        background-color: #f8f9fa;
+    }
+
+    .table-striped tbody tr:nth-of-type(even) {
+        background-color: #e9ecef;
+    }
+</style>
